// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sequence-artist draw cross mark to 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [],
        "class": "sequence__activations",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "lineDash": [
                3,
                3,
              ],
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "sequence__message__line",
            "itemId": "message-0-4",
            "type": "line",
          },
          {
            "attrs": {
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Message",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "sequence__message__text",
            "type": "text",
          },
        ],
        "class": "sequence__message",
        "itemId": "message-0-4",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
    ],
    "type": "group",
  },
  "rendererData": {
    "ascii": {
      "layout": {
        "activations": [],
        "actors": [
          {
            "centerX": 40,
            "classifier": undefined,
            "headerBounds": {
              "startX": 0,
              "startY": 0,
              "stopX": 80,
              "stopY": 50,
            },
            "id": "A",
            "label": "A",
            "leftX": 0,
            "order": 0,
            "rightX": 80,
          },
          {
            "centerX": 137.197265625,
            "classifier": undefined,
            "headerBounds": {
              "startX": 97.197265625,
              "startY": 0,
              "stopX": 177.197265625,
              "stopY": 50,
            },
            "id": "B",
            "label": "B",
            "leftX": 97.197265625,
            "order": 1,
            "rightX": 177.197265625,
          },
        ],
        "contentBounds": {
          "startX": 0,
          "startY": 0,
          "stopX": 177.197265625,
          "stopY": 158.16015625,
        },
        "events": [
          {
            "bounds": {
              "startX": 40,
              "startY": 50,
              "stopX": 137.197265625,
              "stopY": 64.080078125,
            },
            "fromActorId": "A",
            "index": 0,
            "isSelf": false,
            "kind": "message",
            "label": "Message",
            "style": "solid",
            "toActorId": "B",
          },
        ],
        "spans": [],
        "title": undefined,
      },
      "legacyLayout": {
        "activations": [],
        "actors": [
          {
            "classifier": undefined,
            "id": "A",
            "label": "A",
            "order": 0,
          },
          {
            "classifier": undefined,
            "id": "B",
            "label": "B",
            "order": 1,
          },
        ],
        "events": [
          {
            "fromActorId": "A",
            "index": 0,
            "isSelf": false,
            "kind": "message",
            "label": "Message",
            "style": "solid",
            "toActorId": "B",
          },
        ],
        "spans": [],
        "title": undefined,
      },
      "plan": {
        "height": 9,
        "ops": [
          {
            "height": 3,
            "type": "rect",
            "width": 10,
            "x": 3,
            "y": 0,
          },
          {
            "align": "center",
            "text": "A",
            "type": "text",
            "x": 8,
            "y": 1,
          },
          {
            "height": 3,
            "type": "rect",
            "width": 10,
            "x": 22,
            "y": 0,
          },
          {
            "align": "center",
            "text": "B",
            "type": "text",
            "x": 27,
            "y": 1,
          },
          {
            "from": {
              "x": 8,
              "y": 3,
            },
            "to": {
              "x": 8,
              "y": 8,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 27,
              "y": 3,
            },
            "to": {
              "x": 27,
              "y": 8,
            },
            "type": "line",
          },
          {
            "text": "Message",
            "type": "text",
            "x": 14,
            "y": 5,
          },
          {
            "endHead": "filled",
            "from": {
              "x": 8,
              "y": 6,
            },
            "stroke": "solid",
            "to": {
              "x": 27,
              "y": 6,
            },
            "type": "line",
          },
        ],
        "width": 33,
      },
    },
  },
}
`;

exports[`sequence-artist draw participant classifier 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "lineWidth": 1.5,
                    "stroke": "#3b4044",
                  },
                  "type": "circle",
                },
                {
                  "attrs": {
                    "fill": null,
                    "lineWidth": 1.5,
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "ellipse",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "C",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-C",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [],
        "class": "sequence__activations",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "lineWidth": 1.5,
                    "stroke": "#3b4044",
                  },
                  "type": "circle",
                },
                {
                  "attrs": {
                    "fill": null,
                    "lineWidth": 1.5,
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "ellipse",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "C",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-C",
        "type": "group",
      },
    ],
    "type": "group",
  },
  "rendererData": {
    "ascii": {
      "layout": {
        "activations": [],
        "actors": [
          {
            "centerX": 40,
            "classifier": "actor",
            "headerBounds": {
              "startX": 0,
              "startY": 0,
              "stopX": 80,
              "stopY": 50,
            },
            "id": "A",
            "label": "A",
            "leftX": 0,
            "order": 0,
            "rightX": 80,
          },
          {
            "centerX": 130,
            "classifier": "database",
            "headerBounds": {
              "startX": 90,
              "startY": 0,
              "stopX": 170,
              "stopY": 50,
            },
            "id": "B",
            "label": "B",
            "leftX": 90,
            "order": 1,
            "rightX": 170,
          },
          {
            "centerX": 220,
            "classifier": "diamond",
            "headerBounds": {
              "startX": 180,
              "startY": 0,
              "stopX": 260,
              "stopY": 50,
            },
            "id": "C",
            "label": "C",
            "leftX": 180,
            "order": 2,
            "rightX": 260,
          },
        ],
        "contentBounds": {
          "startX": 0,
          "startY": 0,
          "stopX": 260,
          "stopY": 120,
        },
        "events": [],
        "spans": [],
        "title": undefined,
      },
      "legacyLayout": {
        "activations": [],
        "actors": [
          {
            "classifier": "actor",
            "id": "A",
            "label": "A",
            "order": 0,
          },
          {
            "classifier": "database",
            "id": "B",
            "label": "B",
            "order": 1,
          },
          {
            "classifier": "diamond",
            "id": "C",
            "label": "C",
            "order": 2,
          },
        ],
        "events": [],
        "spans": [],
        "title": undefined,
      },
      "plan": {
        "height": 5,
        "ops": [
          {
            "height": 3,
            "type": "rect",
            "width": 10,
            "x": 3,
            "y": 0,
          },
          {
            "align": "center",
            "text": "A",
            "type": "text",
            "x": 8,
            "y": 1,
          },
          {
            "height": 3,
            "type": "rect",
            "width": 10,
            "x": 21,
            "y": 0,
          },
          {
            "align": "center",
            "text": "B",
            "type": "text",
            "x": 26,
            "y": 1,
          },
          {
            "height": 3,
            "type": "rect",
            "width": 10,
            "x": 39,
            "y": 0,
          },
          {
            "align": "center",
            "text": "C",
            "type": "text",
            "x": 44,
            "y": 1,
          },
          {
            "from": {
              "x": 8,
              "y": 3,
            },
            "to": {
              "x": 8,
              "y": 4,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 26,
              "y": 3,
            },
            "to": {
              "x": 26,
              "y": 4,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 44,
              "y": 3,
            },
            "to": {
              "x": 44,
              "y": 4,
            },
            "type": "line",
          },
        ],
        "width": 50,
      },
    },
  },
}
`;

exports[`sequence-artist match example snapshot 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "attrs": {
          "lineDash": [
            2,
            2,
          ],
          "lineWidth": 2,
          "stroke": "#fdb05e",
        },
        "type": "rect",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "User",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-User",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Pintora",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-Pintora",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "anchor": "start",
              "fill": "#f8f8f2",
              "stroke": "#3b4044",
            },
            "class": "sequence__activation",
            "type": "rect",
          },
        ],
        "class": "sequence__activations",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "sequence__message__line",
            "itemId": "message-0-0",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "render this",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "sequence__message__text",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {
                  "fill": "#3b4044",
                  "stroke": "#3b4044",
                  "symbol": "circle",
                },
                "type": "marker",
              },
              {
                "attrs": {
                  "fill": "#fdb05e",
                  "fontWeight": "bold",
                  "text": "1",
                  "textAlign": "center",
                  "textBaseline": "middle",
                },
                "class": "sequence__number",
                "type": "text",
              },
            ],
            "type": "group",
          },
        ],
        "class": "sequence__message",
        "itemId": "message-0-0",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "lineDash": [
                3,
                3,
              ],
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "sequence__message__line",
            "itemId": "message-3-1",
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Has input changed?",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "sequence__message__text",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {
                  "fill": "#3b4044",
                  "stroke": "#3b4044",
                  "symbol": "circle",
                },
                "type": "marker",
              },
              {
                "attrs": {
                  "fill": "#fdb05e",
                  "fontWeight": "bold",
                  "text": "2",
                  "textAlign": "center",
                  "textBaseline": "middle",
                },
                "class": "sequence__number",
                "type": "text",
              },
            ],
            "type": "group",
          },
        ],
        "class": "sequence__message",
        "itemId": "message-3-1",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "stroke": "#fdb05e",
            },
            "class": "loop__label-box",
            "type": "polygon",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "loop",
              "textBaseline": "top",
            },
            "class": "label-text",
            "type": "text",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "[Check input]",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "loop__title",
            "type": "text",
          },
        ],
        "class": "loop",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "lineDash": [
                3,
                3,
              ],
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "sequence__message__line",
            "itemId": "message-5-1",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "your figure here",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "sequence__message__text",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {
                  "fill": "#3b4044",
                  "stroke": "#3b4044",
                  "symbol": "circle",
                },
                "type": "marker",
              },
              {
                "attrs": {
                  "fill": "#fdb05e",
                  "fontWeight": "bold",
                  "text": "3",
                  "textAlign": "center",
                  "textBaseline": "middle",
                },
                "class": "sequence__number",
                "type": "text",
              },
            ],
            "type": "group",
          },
        ],
        "class": "sequence__message",
        "itemId": "message-5-1",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "anchor": "start",
              "fill": "#F8EA75",
              "stroke": "#3b4044",
            },
            "class": "note__bg",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "note over",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "note sequence__note",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "anchor": "start",
              "fill": "#F8EA75",
              "stroke": "#3b4044",
            },
            "class": "note__bg",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "note aside actor",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "note sequence__note",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "anchor": "start",
              "fill": "#F8EA75",
              "stroke": "#3b4044",
            },
            "class": "note__bg",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "multiline note
is possible",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "note sequence__note",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "type": "line",
          },
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#f8f8f2",
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 600,
              "text": "Divider",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "divider",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "User",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-User",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Pintora",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-Pintora",
        "type": "group",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "bold",
          "text": "Sequence Diagram Example",
          "textAlign": "center",
        },
        "class": "sequence__title",
        "type": "text",
      },
    ],
    "type": "group",
  },
  "rendererData": {
    "ascii": {
      "layout": {
        "activations": [
          {
            "actorId": "Pintora",
            "bounds": {
              "startX": 218.59375,
              "startY": 85.296875,
              "stopX": 228.59375,
              "stopY": 273.744140625,
            },
            "endEventIndex": 2,
            "level": 0,
            "startEventIndex": 0,
          },
        ],
        "actors": [
          {
            "centerX": 40,
            "classifier": undefined,
            "headerBounds": {
              "startX": 0,
              "startY": 0,
              "stopX": 80,
              "stopY": 50,
            },
            "id": "User",
            "label": "User",
            "leftX": 0,
            "order": 0,
            "rightX": 80,
          },
          {
            "centerX": 223.59375,
            "classifier": undefined,
            "headerBounds": {
              "startX": 179.9951171875,
              "startY": 0,
              "stopX": 267.1923828125,
              "stopY": 50,
            },
            "id": "Pintora",
            "label": "Pintora",
            "leftX": 179.9951171875,
            "order": 1,
            "rightX": 267.1923828125,
          },
        ],
        "contentBounds": {
          "startX": 0,
          "startY": 0,
          "stopX": 324.990234375,
          "stopY": 533.841796875,
        },
        "events": [
          {
            "bounds": {
              "startX": 40,
              "startY": 50,
              "stopX": 223.59375,
              "stopY": 61.6484375,
            },
            "fromActorId": "User",
            "index": 0,
            "isSelf": false,
            "kind": "message",
            "label": "render this",
            "style": "solid",
            "toActorId": "Pintora",
          },
          {
            "bounds": {
              "startX": 228.59375,
              "startY": 133.296875,
              "stopX": 228.59375,
              "stopY": 178.3369140625,
            },
            "fromActorId": "Pintora",
            "index": 1,
            "isSelf": true,
            "kind": "message",
            "label": "Has input changed?",
            "style": "dashed",
            "toActorId": "Pintora",
          },
          {
            "bounds": {
              "startX": 218.59375,
              "startY": 233.376953125,
              "stopX": 40,
              "stopY": 248.560546875,
            },
            "fromActorId": "Pintora",
            "index": 2,
            "isSelf": false,
            "kind": "message",
            "label": "your figure here",
            "style": "dashed",
            "toActorId": "User",
          },
          {
            "anchorActorIds": [
              "User",
              "Pintora",
            ],
            "bounds": {
              "startX": 35,
              "startY": 283.744140625,
              "stopX": 228.59375,
              "stopY": 314.208984375,
            },
            "index": 3,
            "kind": "note",
            "placement": "over",
            "text": "note over",
          },
          {
            "anchorActorIds": [
              "User",
              "User",
            ],
            "bounds": {
              "startX": 45,
              "startY": 324.208984375,
              "stopX": 218.59375,
              "stopY": 355.857421875,
            },
            "index": 4,
            "kind": "note",
            "placement": "right",
            "text": "note aside actor",
          },
          {
            "anchorActorIds": [
              "User",
              "User",
            ],
            "bounds": {
              "startX": 45,
              "startY": 365.857421875,
              "stopX": 199.39453125,
              "stopY": 413.505859375,
            },
            "index": 5,
            "kind": "note",
            "placement": "right",
            "text": "multiline note
is possible",
          },
          {
            "bounds": {
              "startX": 0,
              "startY": 0,
              "stopX": 67.197265625,
              "stopY": 11.6484375,
            },
            "index": 6,
            "kind": "divider",
            "text": "Divider",
          },
        ],
        "spans": [
          {
            "bounds": {
              "startX": 132.197265625,
              "startY": 98.296875,
              "stopX": 324.990234375,
              "stopY": 233.376953125,
            },
            "endEventIndex": 1,
            "kind": "loop",
            "label": "Check input",
            "sections": [],
            "startEventIndex": 1,
          },
        ],
        "title": "Sequence Diagram Example",
      },
      "legacyLayout": {
        "activations": [
          {
            "actorId": "Pintora",
            "endEventIndex": 2,
            "level": 0,
            "startEventIndex": 0,
          },
        ],
        "actors": [
          {
            "classifier": undefined,
            "id": "User",
            "label": "User",
            "order": 0,
          },
          {
            "classifier": undefined,
            "id": "Pintora",
            "label": "Pintora",
            "order": 1,
          },
        ],
        "events": [
          {
            "fromActorId": "User",
            "index": 0,
            "isSelf": false,
            "kind": "message",
            "label": "render this",
            "style": "solid",
            "toActorId": "Pintora",
          },
          {
            "fromActorId": "Pintora",
            "index": 1,
            "isSelf": true,
            "kind": "message",
            "label": "Has input changed?",
            "style": "dashed",
            "toActorId": "Pintora",
          },
          {
            "fromActorId": "Pintora",
            "index": 2,
            "isSelf": false,
            "kind": "message",
            "label": "your figure here",
            "style": "dashed",
            "toActorId": "User",
          },
          {
            "anchorActorIds": [
              "User",
              "Pintora",
            ],
            "index": 3,
            "kind": "note",
            "placement": "over",
            "text": "note over",
          },
          {
            "anchorActorIds": [
              "User",
              "User",
            ],
            "index": 4,
            "kind": "note",
            "placement": "right",
            "text": "note aside actor",
          },
          {
            "anchorActorIds": [
              "User",
              "User",
            ],
            "index": 5,
            "kind": "note",
            "placement": "right",
            "text": "multiline note
is possible",
          },
          {
            "index": 6,
            "kind": "divider",
            "text": "Divider",
          },
        ],
        "spans": [
          {
            "endEventIndex": 1,
            "kind": "loop",
            "label": "Check input",
            "sections": [],
            "startEventIndex": 1,
          },
        ],
        "title": "Sequence Diagram Example",
      },
      "plan": {
        "height": 34,
        "ops": [
          {
            "height": 3,
            "type": "rect",
            "width": 10,
            "x": 3,
            "y": 0,
          },
          {
            "align": "center",
            "text": "User",
            "type": "text",
            "x": 8,
            "y": 1,
          },
          {
            "height": 3,
            "type": "rect",
            "width": 11,
            "x": 40,
            "y": 0,
          },
          {
            "align": "center",
            "text": "Pintora",
            "type": "text",
            "x": 45,
            "y": 1,
          },
          {
            "from": {
              "x": 8,
              "y": 3,
            },
            "to": {
              "x": 8,
              "y": 33,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 45,
              "y": 3,
            },
            "to": {
              "x": 45,
              "y": 33,
            },
            "type": "line",
          },
          {
            "char": "|",
            "height": 12,
            "type": "fill",
            "width": 1,
            "x": 45,
            "y": 6,
          },
          {
            "height": 8,
            "type": "rect",
            "width": 40,
            "x": 26,
            "y": 7,
          },
          {
            "text": "render this",
            "type": "text",
            "x": 21,
            "y": 5,
          },
          {
            "endHead": "filled",
            "from": {
              "x": 8,
              "y": 6,
            },
            "stroke": "solid",
            "to": {
              "x": 45,
              "y": 6,
            },
            "type": "line",
          },
          {
            "text": "Has input changed?",
            "type": "text",
            "x": 47,
            "y": 9,
          },
          {
            "from": {
              "x": 45,
              "y": 10,
            },
            "to": {
              "x": 53,
              "y": 10,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 53,
              "y": 10,
            },
            "to": {
              "x": 53,
              "y": 12,
            },
            "type": "line",
          },
          {
            "endHead": "filled",
            "from": {
              "x": 53,
              "y": 12,
            },
            "to": {
              "x": 45,
              "y": 12,
            },
            "type": "line",
          },
          {
            "text": "your figure here",
            "type": "text",
            "x": 18,
            "y": 15,
          },
          {
            "endHead": "filled",
            "from": {
              "x": 45,
              "y": 16,
            },
            "stroke": "dashed",
            "to": {
              "x": 8,
              "y": 16,
            },
            "type": "line",
          },
          {
            "height": 3,
            "type": "rect",
            "width": 40,
            "x": 7,
            "y": 19,
          },
          {
            "text": "note over",
            "type": "text",
            "x": 9,
            "y": 20,
          },
          {
            "height": 3,
            "type": "rect",
            "width": 36,
            "x": 9,
            "y": 23,
          },
          {
            "text": "note aside actor",
            "type": "text",
            "x": 11,
            "y": 24,
          },
          {
            "height": 4,
            "type": "rect",
            "width": 32,
            "x": 9,
            "y": 27,
          },
          {
            "text": "multiline note",
            "type": "text",
            "x": 11,
            "y": 28,
          },
          {
            "text": "is possible",
            "type": "text",
            "x": 11,
            "y": 29,
          },
          {
            "from": {
              "x": 0,
              "y": 32,
            },
            "to": {
              "x": 20,
              "y": 32,
            },
            "type": "line",
          },
          {
            "text": "Divider",
            "type": "text",
            "x": 22,
            "y": 32,
          },
          {
            "from": {
              "x": 30,
              "y": 32,
            },
            "to": {
              "x": 52,
              "y": 32,
            },
            "type": "line",
          },
          {
            "text": "loop Check input",
            "type": "text",
            "x": 28,
            "y": 7,
          },
        ],
        "width": 67,
      },
    },
  },
}
`;

exports[`sequence-artist will render boxes 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#d6d3fa",
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "text": "group participants",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "type": "text",
          },
        ],
        "class": "sequence__participant-boxes",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Alice",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [],
        "class": "sequence__activations",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Alice",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
    ],
    "type": "group",
  },
  "rendererData": {
    "ascii": {
      "layout": {
        "activations": [],
        "actors": [
          {
            "centerX": 50,
            "classifier": undefined,
            "headerBounds": {
              "startX": 10,
              "startY": 35.04,
              "stopX": 90,
              "stopY": 85.03999999999999,
            },
            "id": "A",
            "label": "Alice",
            "leftX": 10,
            "order": 0,
            "rightX": 90,
          },
          {
            "centerX": 140,
            "classifier": undefined,
            "headerBounds": {
              "startX": 100,
              "startY": 35.04,
              "stopX": 180,
              "stopY": 85.03999999999999,
            },
            "id": "B",
            "label": "B",
            "leftX": 100,
            "order": 1,
            "rightX": 180,
          },
        ],
        "contentBounds": {
          "startX": 0,
          "startY": 0,
          "stopX": 192.79,
          "stopY": 165.04,
        },
        "events": [],
        "spans": [],
        "title": undefined,
      },
      "legacyLayout": {
        "activations": [],
        "actors": [
          {
            "classifier": undefined,
            "id": "A",
            "label": "Alice",
            "order": 0,
          },
          {
            "classifier": undefined,
            "id": "B",
            "label": "B",
            "order": 1,
          },
        ],
        "events": [],
        "spans": [],
        "title": undefined,
      },
      "plan": {
        "height": 5,
        "ops": [
          {
            "height": 3,
            "type": "rect",
            "width": 10,
            "x": 5,
            "y": 0,
          },
          {
            "align": "center",
            "text": "Alice",
            "type": "text",
            "x": 10,
            "y": 1,
          },
          {
            "height": 3,
            "type": "rect",
            "width": 10,
            "x": 23,
            "y": 0,
          },
          {
            "align": "center",
            "text": "B",
            "type": "text",
            "x": 28,
            "y": 1,
          },
          {
            "from": {
              "x": 10,
              "y": 3,
            },
            "to": {
              "x": 10,
              "y": 4,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 28,
              "y": 3,
            },
            "to": {
              "x": 28,
              "y": 4,
            },
            "type": "line",
          },
        ],
        "width": 34,
      },
    },
  },
}
`;
